{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 224,
  "lineage": "933b6910-04af-a2bf-2130-33ab9b552676",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "control1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3db6a6bb59b68d3",
            "arn": "arn:aws:ec2:us-east-1:616987080657:instance/i-0b1d50b2ace3b4d41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1d50b2ace3b4d41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b0e22e0f362b7be7",
            "private_dns": "ip-172-16-0-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.124",
            "public_dns": "ec2-54-162-88-176.compute-1.amazonaws.com",
            "public_ip": "54.162.88.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051ecb24754536e36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0649b0773629ad609",
            "tags": {
              "Name": "control1"
            },
            "tags_all": {
              "Name": "control1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087562c17b0148f29"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.k8s_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_ami.ubuntu",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "worker1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3db6a6bb59b68d3",
            "arn": "arn:aws:ec2:us-east-1:616987080657:instance/i-027e6e8244d9e68e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027e6e8244d9e68e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0325c6e49d95d5e38",
            "private_dns": "ip-172-16-0-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.48",
            "public_dns": "ec2-54-166-162-8.compute-1.amazonaws.com",
            "public_ip": "54.166.162.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c256a5223c82e19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0649b0773629ad609",
            "tags": {
              "Name": "worker1"
            },
            "tags_all": {
              "Name": "worker1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087562c17b0148f29"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.k8s_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_ami.ubuntu",
            "data.http.my_public_ip"
          ]
        },
        {
          "index_key": "worker2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3db6a6bb59b68d3",
            "arn": "arn:aws:ec2:us-east-1:616987080657:instance/i-03b734025d9bc8a17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b734025d9bc8a17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a6e52d614579c2c",
            "private_dns": "ip-172-16-0-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.31",
            "public_dns": "ec2-52-91-236-114.compute-1.amazonaws.com",
            "public_ip": "52.91.236.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04534a5a13e0921f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0649b0773629ad609",
            "tags": {
              "Name": "worker2"
            },
            "tags_all": {
              "Name": "worker2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087562c17b0148f29"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.k8s_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_ami.ubuntu",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616987080657:internet-gateway/igw-04c5abb554aaf21c9",
            "id": "igw-04c5abb554aaf21c9",
            "owner_id": "616987080657",
            "tags": {
              "Createdby": "Terraform",
              "Name": "vpc_k8s_igw"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Name": "vpc_k8s_igw"
            },
            "vpc_id": "vpc-0d7bd08dae135d707"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616987080657:route-table/rtb-05763adca22649bd7",
            "id": "rtb-05763adca22649bd7",
            "owner_id": "616987080657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c5abb554aaf21c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Createdby": "Terraform",
              "Name": "k8s_rtb"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Name": "k8s_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7bd08dae135d707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bd895ed3ad07363",
            "route_table_id": "rtb-05763adca22649bd7",
            "subnet_id": "subnet-0649b0773629ad609"
          },
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_route_table.k8s_rtb",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616987080657:security-group/sg-087562c17b0148f29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087562c17b0148f29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "165.225.10.220/32",
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "165.225.10.220/32"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s_sg",
            "name_prefix": "",
            "owner_id": "616987080657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Createdby": "Terraform",
              "Name": "k8s_sg"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Name": "k8s_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7bd08dae135d707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616987080657:subnet/subnet-0649b0773629ad609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0649b0773629ad609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616987080657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Createdby": "Terraform",
              "Name": "k8s_subnet"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Name": "k8s_subnet"
            },
            "vpc_id": "vpc-0d7bd08dae135d707"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616987080657:vpc/vpc-0d7bd08dae135d707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-03a376392b0d7a1f5",
            "default_route_table_id": "rtb-024ce266a08c18f02",
            "default_security_group_id": "sg-0c0847c7477df2463",
            "dhcp_options_id": "dopt-0ad5d407a272a0066",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7bd08dae135d707",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024ce266a08c18f02",
            "owner_id": "616987080657",
            "tags": {
              "Createdby": "Terraform",
              "Name": "k8s_vpc"
            },
            "tags_all": {
              "Createdby": "Terraform",
              "Name": "k8s_vpc"
            }
          }
        }
      ]
    }
  ]
}